[package]
authors = ["flejz <flejz@protonmail.com>"]
categories = ["concurrency"]
description = "A library for sending values to a flume bounded channel, overwriting the oldest values if the channel is full."
documentation = "https://docs.rs/flume-overwrite"
edition = "2024"
homepage = "https://github.com/flejz/flume-overwrite"
keywords = ["flume", "overwrite", "bounded", "channel"]
license = "MIT"
license-file = "LICENSE"
name = "flume-overwrite"
readme = "README.md"
repository = "https://github.com/flejz/flume-overwrite"
version = "0.1.0"

[dependencies]
flume = "0.11.1"

[dev-dependencies]
futures = "0.3.31"
futures-timer = "3.0.3"
